# tyme

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile_arm_build  README.md  Trunk.toml  index.html
src/: countdown.rs  main.rs  selects.rs  stopwatch.rs  time_links.rs  utils.rs
static-files/: manifest.json
static-files/static/css/: custom.sass
static-files/static/js/: install_button.js  main.js  show_settings.js  sw-reg.js
