[package]
name = "tyme"
version = "1.2.1"
edition = "2024"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"]}
js-sys = "0.3.82"
gloo = "0.11" # todo: use smaller like gloo_utils, gloo_console,...
wasm-bindgen = "0.2.105"

[dependencies.web-sys]
version = "0.3.82"
features = [
        "Document",
        "HtmlInputElement", 
        "Event", 
        "MouseEvent",
        "HtmlMediaElement",
        "HtmlLinkElement",
    ] 


[profile.release]
lto = true
opt-level = 's'  # use option z for even smaller wasm file sizes